2006-10-11  Raphaël Quinet  <raphael@gimp.org>

	* app/xcf/xcf-load.c (xcf_load_tile_rle): workaround for bug
	#357809: avoid crashing when invalid offsets are read for a
	compressed tile in the XCF file.

2006-10-11  Sven Neumann  <sven@gimp.org>

	* modules/Makefile.am: build the color-managed CMYK color selector
	with the same filename as the naive implementation; they are
	mutually exclusive.

2006-10-11  Sven Neumann  <sven@gimp.org>

	* app/pdb/gimppdb.c: added missing casts.

2006-10-10  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-colors.c: Add slice support to the colors
	types. Fixes bug #360423.

2006-10-10  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/nova.c: applied patch from Aurimas Juška that
	adds a missing cast which should fix bug #340073.

2006-10-09  Tor Lillqvist  <tml@novell.com>

	* configure.in: Suffix LCMS with EXEEXT. Unbreaks build on Win32.

2006-10-09  Michael Natterer  <mitch@gimp.org>

	* app/actions/data-commands.c
	* app/actions/documents-commands.c
	* app/actions/drawable-commands.c
	* app/actions/gradients-commands.c
	* app/actions/image-commands.c
	* app/actions/layers-commands.c
	* app/actions/palettes-commands.c
	* app/actions/select-commands.c
	* app/actions/vectors-commands.c
	* app/core/gimp-contexts.c
	* app/core/gimp-documents.c
	* app/core/gimp-edit.c
	* app/core/gimp-modules.c
	* app/core/gimp-parasites.c
	* app/core/gimp-templates.c
	* app/core/gimp-units.c
	* app/core/gimpchannel.c
	* app/core/gimpdatafactory.[ch]
	* app/core/gimpdrawable-bucket-fill.c
	* app/core/gimpimage-merge.c
	* app/core/gimpimagefile.c
	* app/core/gimplayer-floating-sel.c
	* app/core/gimppdbprogress.c
	* app/core/gimpselection.c
	* app/dialogs/palette-import-dialog.c
	* app/display/gimpdisplayshell-dnd.c
	* app/gui/session.c
	* app/gui/themes.c
	* app/pdb/gimpprocedure.c
	* app/plug-in/gimpplugin-message.c
	* app/plug-in/gimpplugin.c
	* app/plug-in/gimppluginmanager-file.c
	* app/plug-in/gimppluginmanager.c