@@ -462,6 +462,11 @@
 # 
 # (activate-on-focus yes)
 
+# What to do when the space bar is pressed in the image window.  Possible
+# values are none, pan and move.
+# 
+# (space-bar-action pan)
+
 # Tools such as fuzzy-select and bucket fill find regions based on a
 # seed-fill algorithm.  The seed fill starts at the initially selected pixel
 # and progresses in all directions until the difference of pixel intensity
